// Defines the protobuf messsages and services used by the yt_box backend and
// clients to the backend.
//
// Usage:
// protoc -I proto/ --go_out=plugins=grpc:proto proto/ytb-be.proto

syntax = "proto3";

package backendpb;

service YtbBackend {
    // Submit a song to the backend service to be added to the play queue
    rpc SubmitSong(SongSubmission) returns (ErrorMessage) {}
}

// Contains error number and message
message ErrorMessage {
    // success flag
    bool success = 1;

    // error message body
    string message = 2;
}

// Data needed to submit a song to the backend service
message SongSubmission {
    // Service link to the song (YouTube, Spotify, etc)
    string link = 1;

    // Id of the user who submitted the link
    uint32 userId = 2;
}
